# susie

./: Cargo.toml  Makefile  test.c  test.json
src/: app.rs  linking.rs  main.rs  structs.rs  subwindow.rs  window.rs
