[package]
name = "susie"
version = "0.1.0"
edition = "2021"
description = "SUSIE (/sʌsi:/) -- System & User Settings that are Independent & Extensible"

[dependencies]
iced = "0.13.1"
lazy_static = "1.5.0"
libloading = "0.8.6"
serde_json = "1.0.140"
smart-default = "0.7.1"

[dependencies.serde]
version = "1.0.2"
features = ["derive"]
